import Streaming.*;

public class MainMenu {

    public static void main (String[] args){

        //User test = new User();
        //test.user();

        /*Search test = new Search();
        test.userSearch("Data\\movieData.csv","DRAMA");*/

        StartMenu testStart = new StartMenu();
        testStart.welcome();

    }
}
