package Streaming;


import java.util.ArrayList;

public interface IMedia {
        String getTitle();
        String getYear();
        String getCategory();
        double getRating();
    }
