package Streaming;

public class Media extends MainMenu{

    public Media (){

    }
}
