@startuml
!pragma layout smetana

class StartMenu {
+ static void main (String [] args)
void logIn ();
}

class MainMenu {
void displayWatched ();
void displaySaved ();
void searchTitel ();
void searchCategory ();
}

class User {
ArrayList IMedia
ArrayList Watched
ArrayList Saved
ArrayList Accounts
String userName
String userPassword
String ArrayList <> addAccounts ();
void usersSavedDataList(ArrayList<String> mediaTitles);
String ArrayList <> savedMedia ();
void copyLineFromDocToSavedMediaArraylist()
String ArrayList <> watchedMedia ();
}

class Media {
void searchMedia ();
void displayMedia ();
String getMedia ();
}



class Search {
void searchCategoryMovie (readFile());
void searchTitelMovie (readFile());
void searchCategorySeries (readFile());
void searchTitelSeries (readFile());
void searchRating (readFile());

}

class Movie {
String getMovie ();
}



class Series {
- String seriesLength
String getSeries ();
}



interface IMedia {
String loadTitel ();
String loadCategories ();
double loadRating ();
int loadYear ();

}

package util {

class TextUI {
String displayMessage ();
String promptText ();
boolean promptQuestion ();
String IOExceptionMessage ();
}



class FileIO {
void 3Options ();
String readUserInput ();
String readFile ();
}

}

StartMenu --- MainMenu

IMedia <|-- Series
IMedia <|-- Movie



MainMenu --- User
MainMenu --- Media
MainMenu --- TextUI
MainMenu --- FileIO


Media *-- Movie
Media *-- Series
Media *-- Search

@enduml
